token bij login

--- a/views/login.html
+++ b/views/login.html
@@ -27,6 +27,7 @@
                   <button class="btn btn--primary login__btn">Let's go</button>
                 </div>
               </div>
+              <script src="../public/javascripts/login.js"></script>
     
 </body>
 </html>
