--- a/views/chat.html
+++ b/views/chat.html
@@ -31,6 +31,7 @@
                 
                 
               </div>
+              <script src="../public/javascripts/chat.js"></script>
     
 </body>
 </html>
