--- a/views/chat.html
+++ b/views/chat.html
@@ -10,7 +10,7 @@
 <body>
 
         <div class="app">
-                <h2 class="title">Todo App</h2>
+                <h2 class="title">Birthday chat</h2>
                 <div class="todos">
                   <div class="todo__new">
                     <input type="text" class="input--text todo__input" placeholder="What needs to be done">
