geboortedatum opslaan van user

--- a/views/chat.html
+++ b/views/chat.html
@@ -13,19 +13,15 @@
                 <h2 class="title">Birthday chat</h2>
                 <div class="todos">
                   <div class="todo__new">
-                    <input type="text" class="input--text todo__input" placeholder="What needs to be done">
+                    <input type="text" class="input--text todo__input" placeholder="Say something">
                   </div>
               
-                  <div class="todo">
-                    <input type="checkbox" class="todo__state">  
-                    <div class="todo__text">My first todo</div>
-                    <a class="todo__delete" href="#">delete</a>
+                  <div class="todo"> 
+                    <div class="todo__text">My first message</div>
                   </div>
               
-                  <div class="todo todo--completed">
-                    <input type="checkbox" class="todo__state">  
-                    <div class="todo__text">My first todo</div>
-                    <a class="todo__delete" href="#">delete</a>
+                  <div class="todo"> 
+                    <div class="todo__text">My first message</div>
                   </div>
                 </div>
                 
